grid overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -168,14 +168,13 @@ p {
 }
 
 .gallery-grid {
-    flex-direction: row;
-    display: inline-grid;
-    grid-template-columns: auto auto auto;
-    
+   display: inline-grid;
+   grid-template-columns: 1fr 1fr;
+   max-height: 50%;
 }
 
 .gallery-grid img {
-max-width: max-content;
+max-width: 25%;
 max-height: 50%;
 
 }
